--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "chess.js": "^1.0.0-beta.8",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/chess.js": "^0.13.7",
