--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.8.1",
     "chess.js": "^1.0.0-beta.8",
     "next": "14.2.4",
     "react": "^18",
