--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@mui/material": "^5.15.20",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.8.1",
+    "@web3auth/base": "^8.8.0",
+    "@web3auth/modal": "^8.10.1",
+    "@web3auth/solana-provider": "^8.8.0",
     "chess.js": "^1.0.0-beta.8",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "web3": "^4.10.0"
   },
   "devDependencies": {
     "@types/chess.js": "^0.13.7",
