--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@web3auth/base": "^8.8.0",
     "@web3auth/modal": "^8.10.1",
     "@web3auth/solana-provider": "^8.8.0",
+    "@web3auth/wallet-services-plugin": "^8.10.2",
     "chess.js": "^1.0.0-beta.8",
     "next": "14.2.4",
     "react": "^18",
