--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.20",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.8.1",
+    "@tanstack/react-query": "^5.51.3",
     "@web3auth/base": "^8.8.0",
     "@web3auth/modal": "^8.10.1",
     "@web3auth/solana-provider": "^8.8.0",
