--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-data-grid": "^7.10.0",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.8.1",
     "@tanstack/react-query": "^5.51.3",
