--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@web3auth/wallet-services-plugin": "^8.10.2",
     "axios": "^1.7.2",
     "chess.js": "^1.0.0-beta.8",
+    "date-fns": "^3.6.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
