--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^7.10.0",
+    "@solana/actions": "^1.4.0",
+    "@solana/web3.js": "^1.95.1",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.8.1",
     "@tanstack/react-query": "^5.51.3",
