--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "web3": "^4.10.0"
   },
   "devDependencies": {
