--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^7.10.0",
     "@solana/actions": "^1.4.0",
-    "@solana/web3.js": "^1.95.1",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.2",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.8.1",
     "@tanstack/react-query": "^5.51.3",
