--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chess.js": "^1.0.0-beta.8",
     "date-fns": "^3.6.0",
     "next": "14.2.4",
+    "pino-pretty": "^11.2.2",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
