--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.7.2",
     "chess.js": "^1.0.0-beta.8",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.11.9",
     "next": "14.2.4",
     "pino-pretty": "^11.2.2",
     "react": "^18",
